--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,15 +1,16 @@
-name: "Common airport Checkin"
+name: "Fund Data Checkin"
 
 on:
   schedule:
-    - cron: "0 22 * * *"  # scheduled at 06:00 (UTC+8) everyday
+    - cron: "0 20 * * *"  # scheduled at 20:20 (UTC+8) everyday
+    - cron: "0 30 * * *"  # scheduled at 20:30 (UTC+8) everyday
   workflow_dispatch:
 
 env:
   RUN_ENV: 'prod'
 
 jobs:
-  build:
+  check-fund-data:
     runs-on: ubuntu-latest
     # if: github.ref == 'refs/heads/master'
 
@@ -25,15 +26,17 @@ jobs:
         with:
           python-version: 3.7
 
-      - name: Random sleep
-        if: github.event_name == 'schedule'
-        run: sleep $(shuf -i 10-300 -n 1)
-
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-      - name: Run sign
+
+      - name: Run fund checkin script
+        run: |
+          python ./main.py
+
+      - name: Send result
+        if: github.event_name == 'schedule'
         env:
           URL: ${{ secrets.URL }}
           SCKEY: ${{ secrets.SCKEY }}
