--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,8 +2,9 @@ name: "Fund Data Checkin"
 
 on:
   schedule:
-    - cron: "0 20 * * * && 0 30 * * *"  # scheduled at 20:20 and 20:30 (UTC+8) everyday
+    - cron: "0 20,30 * * *"  # scheduled at 20:00 and 20:30 (UTC+8) everyday
   workflow_dispatch:
+
 
 env:
   RUN_ENV: 'prod'
